--- a/tasks/index.html
+++ b/tasks/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-  <title>React</title>
+  <title>Redux</title>
   <meta charset="UTF-8">
   <style>
     body {
-      font-family: arial sans-serif;
+      font-family: "Segoe UI","Helvetica Neue",Roboto,Arial,"Liberation Sans","Nimbus Sans L",sans-serif;
     }
 
     #container {
@@ -28,7 +28,7 @@
 
 <body>
   <div id="container">
-    <h1>React</h1>
+    <h1>Redux</h1>
     <div id="tasks"></div>
   </div>
   <script src="tasks.js"></script>
