--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ npm install
 
 Затем запусти dev-сервер, чтобы видеть результаты решений заданий:
 ```cmd
-npm run start
+npm start
 ```
 
 Посмотреть можно будет на <a href="http://localhost:8080">http://localhost:8080</a>
@@ -1070,9 +1070,12 @@ const store = createStore(
 
 ### Выводы
 
-Middleware позволяет:
+**Middleware — точка расширения для Redux**
+
+Позволяет:
 - Добавлять новые фичи в обработку действий
 - Логировать все действия без модификации кода приложения
+- и так далее
 
 Middleware для многих задач уже написаны
 А если нужно что-то специфическое — **легко написать свое!**
