--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ class App extends React.Component {
 Сущность, которая содержит методы:
 - `getState` для получения текущего состояния
 - `dispatch` для обработки изменений состояния
-- `subsribe` для подписки на изменения состояния
+- `subscribe` для подписки на изменения состояния
 
 Будем создавать с помощью специальной функции:
 ```js
