replaced 'npm install' with 'npm ci'

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 Скачиваем все необходимые пакеты Node.js:
 ```
 cd tasks
-npm install
+npm ci
 ```
 
 Затем запусти dev-сервер, чтобы видеть результаты решений заданий:
