--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 # Redux
 
-<p class="center"><a href="https://github.com/kontur-courses/redux">https://github.com/kontur-courses/<b>redux</b></a></p>
+<p class="center"><a href="https://github.com/kontur-web-courses/redux">https://github.com/kontur-web-courses/<b>redux</b></a></p>
 
 </script></section>
 
