--- a/index.html
+++ b/index.html
@@ -1560,7 +1560,7 @@ export const store = configureStore({
     page: pageReducer,
     products: productsReducer
   },
-  preloadedState
+  preloadedState,
   middleware: [middleware1, middleware2, middleware3]
 });
 ```
@@ -1670,7 +1670,7 @@ const productsSlice = createSlice({
 
 ***
 
-### Задание 2.4. Api
+### Задание 2.5. Api
 
 ***
 
