removed word "container" from text

--- a/index.html
+++ b/index.html
@@ -1143,9 +1143,8 @@ const state = {
 ***
 
 ### Выводы
-1. Коллекция позволяет подключать контейнер по идентификатору: все необходимые компоненту данные контейнер достанет из `byId`
-2. Компоненту, отображающему список контейнеров,
-достаточно знать список идентификаторов
+1. Иногда, чтобы отобразить список компонентов, родительскому компоненту достаточно знать список идентификаторов
+2. Коллекция позволяет подключать компоненты по идентификатору: все необходимые компоненту данные он достанет по идентификатору
 
 </script></section>
 
