npm i command instead npm ci

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 Скачиваем все необходимые пакеты Node.js:
 ```
 cd tasks
-npm ci
+npm i
 ```
 
 Затем запусти dev-сервер, чтобы видеть результаты решений заданий:
