--- a/index.html
+++ b/index.html
@@ -2453,7 +2453,7 @@ const result: any = useSelector(selector: Function, equalityFn?: Function);
 
 <section data-markdown><script type="text/template">
 
-## 2.9. Передача состояния между slice-редьюсерами
+## 2.9. Передача состояния между слайсами
 
 ***
 
@@ -2465,7 +2465,7 @@ const result: any = useSelector(selector: Function, equalityFn?: Function);
 
 ***
 
-### Как передавать состояние между slice-редьюсерами?
+### Как передавать состояние между слайсами?
 
 Обратимся к [разделу](https://redux.js.org/faq/reducers#how-do-i-share-state-between-two-reducers-do-i-have-to-use-combinereducers) FAQ документации. Можно использовать несколько подходов:
 - Реорганизовать структуру state
@@ -2476,7 +2476,7 @@ const result: any = useSelector(selector: Function, equalityFn?: Function);
 
 ### Реорганизация state
 
-Если редюсеру необходимо получить данные из другого слайса, может потребоваться реорганизовать структуру дерева состояний таким образом, чтобы один редьюсер обрабатывал больше данных.
+Если редюсеру необходимо получить данные из другого слайса, может потребоваться **реорганизовать структуру** дерева состояний (state) таким образом, чтобы один редьюсер обрабатывал больше данных
 
 Note:
 Подход нужно использовать с осторожностью.
@@ -2533,7 +2533,7 @@ function crossSliceReducer(state, action) {
 
 Можно использовать middleware с асинхронной логикой, такое как redux-thunk, которое имеет доступ ко всему состоянию через getState()
 
-Создатель действия (action creator) может получить дополнительные данные из состояния и поместить их в действие, чтобы у каждого редьюсера было достаточно информации для обновления своего собственного среза состояния (state slice)
+Создатель действия (action creator) может получить дополнительные данные из состояния и поместить их в действие, чтобы у каждого редьюсера было достаточно информации для обновления своего собственного слайса состояния (state slice)
 
 ***
 
@@ -2560,8 +2560,7 @@ dispatch(asyncThunk(name));
 
 ### Выводы
 
-Редьюсер не обязательно декомпозируется по слайсам.
-Он может декомпозироваться по шагам.
+Redux-thunk можно использовать для передачи состояния между слайсами
 
 </script></section>
 
