--- a/index.html
+++ b/index.html
@@ -2445,6 +2445,28 @@ const result: any = useSelector(selector: Function, equalityFn?: Function);
 
 ### Задание 2.8. Cart
 
+***
+
+### Когда подключать компонент к store?
+
+Обратимся к разделу [Style Guide: Best Practices](https://redux.js.org/style-guide/#connect-more-components-to-read-data-from-the-store) документации:
+
+> Предпочтительнее иметь больше UI компонентов подписанных на store Redux, и читать данные на более детальном уровне. Обычно это приводит к повышению производительности UI, поскольку при изменении конкретного фрагмента состояния требуется рендеринг меньшего количества компонентов.
+
+***
+
+### Когда подключать компонент к store?
+
+**Но не следует подключать все компоненты к store!**
+
+К store имеет смысл подключать **общие блоки**, вроде меню или чата.
+
+Например, страницу `Cart` стоит подключить к store, а элемент на странице `Purchase` — нет, поскольку его можно потом использовать для заказов `Orders`.
+
+С другой стороны `Product` на странице `Menu` ранее был подключен к store и при добавлении корзины его удобно использовать.
+
+Поэтому полезно делать контейнеры для **компонентов, активно взаимодействующих с другими частями приложения**.
+
 </script></section>
 
 
