--- a/tasks/src/1.Sandglass/index.html
+++ b/tasks/src/1.Sandglass/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+	<head>
+		<title>Sandglass</title>
+		<meta charset="UTF-8" />
+	</head>
 
-<head>
-  <title>Sandglass</title>
-  <meta charset="UTF-8">
-</head>
-
-<body>
-  <div id="app"></div>
-  <script src="/build/Sandglass.js"></script>
-</body>
-
+	<body>
+		<div id="app"></div>
+		<script src="/build/Sandglass.js"></script>
+	</body>
 </html>
