--- a/tasks/src/2.Sushi/index.html
+++ b/tasks/src/2.Sushi/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+	<head>
+		<title>Sushi &amp; Rolls</title>
+		<meta charset="UTF-8" />
+	</head>
 
-<head>
-  <title>Sushi &amp; Rolls</title>
-  <meta charset="UTF-8">
-</head>
-
-<body>
-  <div id="app"></div>
-  <script src="/build/Sushi.js"></script>
-</body>
-
+	<body>
+		<div id="app"></div>
+		<script src="/build/Sushi.js"></script>
+	</body>
 </html>
